--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "alperenersoy/filament-export": "^4.0",
         "filament/filament": "^4.1",
+        "jeffersongoncalves/filament-qrcode-field": "^2.0",
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
